Update and rename README.md to index.html
Changed name, added tags, classes and edited existing content.

--- a/index.html
+++ b/index.html
@@ -1,38 +1,43 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
-<title>Dungeon Hunter 4</title>
-  </head>
-  <body>
-<h1>Dungeon Hunter 4</h1>
-<h4>Dead Game or Lost Haven?</h4>
-<div class=”intro”>
-    	<p>Game Loft’s 4th in the series used to be a popular game but, with the release of DH5, Game Loft has neglected it severely as it focuses on milking the cash out of DH5.  Unfortunately, DH5 is at least as glitch as DH4, if not moreso, so I wasn’t even able to run it on my iPad.  There are still people playing, but it is hard to tell how many people there are because the game doesn’t require you to log into GL or Facebook, and your name can be assigned by either your device or by using the skip button.  Older players are becoming rare:  in the time I’ve been playing, I’ve seen several long-term players disappear out of frustration over typical MPRPGs:  disloyalty, selfishness, trolling, mimicking another user’s screen name, immaturity, hacking the game, and so on.  MerlionROARS aka EugeneEngine aka Canicanican4 aka…was a frequent benefactor for other players, but he quit the end of 2017.  A month or two before that, Grrr left, then AlytheWitch, and it appears that LizzzvonLipwig has left, while Bernd Thielert and Mithgar Nim almost never play now.   Some old players HAVE returned, such as LordVictor and nothinMatters, and several remain, like Thea_Gelo and evan.  Also, the players represent an array of nations: the USA, Canada, the UK, France, Switzerland, Germany, Indonesia, Malaysia, China, Vietnam, Brazil, Russia and more!</p>
-<p class=”credits”>Many thanks to Grrr, Bernd, Gene, Lizzz, Thea and evan for the information they shared with me which, along with what I learned by playing and a bit from the DH4 FAQs, is the basis of this webpage.   Thanks go to them (and several others!) for not just the information they shared,  but the time the spent helping me in various flags to defeat a boss, and/or acquire charms, gold, experience and/or gems.</p>
-<p class=”GLrights”>All images are from DH4 and I acknowledge any relevant rights which belong to Game Loft.</p>
-</div>
-<figure class=”worldmap”>
-<image src=”/DH4/img/world_map.png” alt=”Dungeon Hunter 4 world map”/>  
-<figcaption> Complete Dungeon Hunter 4 World Map</figcaption>
-</figure>
-
-<h2 class=”gemsQT”><ins>Gems</ins></h2>
-I start with this section because, ultimately, gems are the REAL currency of the game.  They are very valuable, so use them carefully!  Gems are directly purchasable with cash, but you can also earn them.  They are shown as a blue diamond on some screens, including the inventory screen. 
-
-<h3 class=”priorities”>Priorities</h3>
-Your first priorities for those gems should be:
-<ul>
-<li>adding 1 each of the skill slots (active has a max of 3 and passive a max of 4, but they’re not all immediately available for purchase with gems, and some are free);</li>
-<li>adding slots in your backpack (the first is 3 gems and increases by 3 gems for each ensuing slot); and</li>
-<li> getting one of the tier 99 rings ASAP. </li>
-</ul>
-
-Secondary priorities for gem use should be: 
-<ul>
-<li>expanding your inventory further so you have more space to collect and merge charms;</li>
-<li>adding the 4th passive skill slot;</li>
-<li>buying special weekend challenges to get special charms like monk, ghost and essence;</li>
-</ul>
+		<meta charset="utf-8">
+		<title>Dungeon Hunter 4</title>
+  	</head>
+  	<body>
+		<header>
+			<h1>Dungeon Hunter 4</h1>
+			<h4>Dead Game or Lost Haven?</h4>
+		</header>
+		<div class=”intro”>
+    			<p>Game Loft’s 4th in the series used to be a popular game but, with the release of DH5, Game Loft has neglected it severely as it focuses on milking the cash out of DH5.  Unfortunately, DH5 is at least as glitch as DH4, if not moreso, so I wasn’t even able to run it on my iPad.  There are still people playing, but it is hard to tell how many people there are because the game doesn’t require you to log into GL or Facebook, and your name can be assigned by either your device or by using the skip button.  Older players are becoming rare:  in the time I’ve been playing, I’ve seen several long-term players disappear out of frustration over typical MPRPGs:  disloyalty, selfishness, trolling, mimicking another user’s screen name, immaturity, hacking the game, and so on.  MerlionROARS aka EugeneEngine aka Canicanican4 aka…was a frequent benefactor for other players, but he quit the end of 2017.  A month or two before that, Grrr left, then AlytheWitch, and it appears that LizzzvonLipwig has left, while Bernd Thielert and Mithgar Nim almost never play now.   Some old players HAVE returned, such as LordVictor and nothinMatters, and several remain, like Thea_Gelo and evan.  Also, the players represent an array of nations: the USA, Canada, the UK, France, Switzerland, Germany, Indonesia, Malaysia, China, Vietnam, Brazil, Russia and more!</p>
+			<p class=”credits”>Many thanks to Grrr, Bernd, Gene, Lizzz, Thea and evan (and a few others) for the information they shared with me which, along with what I learned by playing and a bit from the DH4 FAQs, is the basis of this webpage.   Thanks go to them (and several others!) for not just the information they shared,  but the time the spent helping me in various flags to defeat a boss, and/or acquire charms, gold, experience and/or gems.</p>
+			<p class=”GLrights”>I acknowledge any relevant rights which belong to Game Loft, especially for the screenshot images from DH4.</p>
+		</div>
+		<div class="worldmap">
+			<figure class=”mapPic”>
+				<image src=”/DH4/img/world_map.png” alt=”Dungeon Hunter 4 world map”/>  
+				<figcaption> Complete Dungeon Hunter 4 World Map</figcaption>
+			</figure>
+		</div>
+		
+		<div class="articles">
+			<article class="gems">
+				<h2 class=”gemsQT”><ins>Gems</ins></h2>
+				<p>I start with this section because, ultimately, gems are the REAL currency of the game.  They are very valuable, so use them carefully!  Gems are directly purchasable with cash from the In-Apps Screen (touch either the gold, gem or + icon to go there), but you can also earn them.  They are shown as a blue diamond on some screens, including the inventory screen.<br/></p>
+				<h3 class=”priorities”>Priorities</h3>
+				<p>Your first priorities for those gems should be:</p>
+				<ul>
+					<li>adding 1 each of the skill slots (active has a max of 3 and passive a max of 4, but they’re not all immediately available for purchase with gems, and some are free);</li>
+					<li>adding slots in your backpack (the first is 3 gems and increases by 3 gems for each ensuing slot); and</li>
+					<li> getting one of the tier 99 rings ASAP. </li>
+				</ul>
+				<p>Secondary priorities for gem use should be:</p>
+				<ul>
+					<li>expanding your inventory further so you have more space to collect and merge charms;</li>
+					<li>adding the 4th passive skill slot;</li>
+					<li>buying special weekend challenges to get special charms like monk, ghost and essence;</li>
+				</ul>
 
 The only tertiary priorities would be buying skill points and extra character slots, or resetting all your skills (this gets more expensive the more skill points you use).
 
