--- a/index.html
+++ b/index.html
@@ -24,28 +24,32 @@
 		<div class="articles">
 			<article class="gems">
 				<h2 class=”gemsQT”><ins>Gems</ins></h2>
-				<p>I start with this section because, ultimately, gems are the REAL currency of the game.  They are very valuable, so use them carefully!  Gems are directly purchasable with cash from the In-Apps Screen (touch either the gold, gem or + icon to go there), but you can also earn them.  They are shown as a blue diamond on some screens, including the inventory screen.<br/></p>
+				<p class="artIntro">I start with this section because, ultimately, gems are the REAL currency of the game.  They are very valuable, so use them carefully!  Gems are directly purchasable with cash from the In-Apps Screen (touch either the gold, gem or + icon to go there), but you can also earn them.  They are shown as a blue diamond on some screens, including the inventory screen.<br/></p>
 				<h3 class=”priorities”>Priorities</h3>
-				<p>Your first priorities for those gems should be:</p>
+				<p class="priority">Your first priorities for those gems should be:</p>
 				<ul>
 					<li>adding 1 each of the skill slots (active has a max of 3 and passive a max of 4, but they’re not all immediately available for purchase with gems, and some are free);</li>
 					<li>adding slots in your backpack (the first is 3 gems and increases by 3 gems for each ensuing slot); and</li>
-					<li> getting one of the tier 99 rings ASAP. </li>
+					<li>getting one of the tier 99 rings ASAP.<br/></li>
 				</ul>
-				<p>Secondary priorities for gem use should be:</p>
+				<p class="priority">Secondary priorities for gem use should be:</p>
 				<ul>
 					<li>expanding your inventory further so you have more space to collect and merge charms;</li>
-					<li>adding the 4th passive skill slot;</li>
-					<li>buying special weekend challenges to get special charms like monk, ghost and essence;</li>
+					<li>adding the 4th passive skill slot; and</li>
+					<li>buying special weekend challenges to get special charms like monk, ghost and essence;<br/></li>
 				</ul>
 
-The only tertiary priorities would be buying skill points and extra character slots, or resetting all your skills (this gets more expensive the more skill points you use).
+				<p class="priority">The only tertiary priorities would be:</p>
+				<ul>
+					<li>buying skill points;</li>
+					<li>buying extra character slots; or</li>
+					<li>resetting all your skills (this gets more expensive the more skill points you use, so try to upgrade skills wisely).<br/></li>
 
-<h3 class=”dont”>DON’T</h3>
-Do <strong>not</strong> waste gems on things like:
-<ul>
-<li>speeding up charm merges, charm removals and equipment upgrades,</li>
-<li>buying equipment from the store for regular usage (except for special weekend challenges), and</li>
+				<h3 class=”dont”>DON’Ts</h3>
+					<p> class="priority">Do <strong>not</strong> waste gems on things like:</p>
+				<ul>
+					<li>speeding up charm merges, charm removals and equipment upgrades,</li>
+					<li>buying equipment from the store for regular usage (except for special weekend challenges), and</li>
 <li>the vanity armor located in the shop (the face mask icon to the far right), etc.</li>
 </ul>
 <h3 class=”gettingGems”>Earning Gems</h3>
