--- a/Challenges.htm
+++ b/Challenges.htm
@@ -21,13 +21,17 @@
 		<p>The weekday challenge plus the upcoming weekend's charm challenge, or both weekend challenges will be displayed.  It will give you no indication whether or not you've completed a challenge.  For the weekend challenges, there will be buttons to push to take you either to the area to complete or to the shop, where it'll show you the weapon you need.
 		<p>In addition to displaying the currently available challenges, this screen also shows you your PVP and Eternal Battle ranks, and you can go to the Leaderboards; and you can also connect to the Chests of Fate and Gifting.  If there is an exclamation mark on either of the latter, that means something (a free item from the Bronze Chest, perhaps, or a gift from someone) is waiting for you from that area.
 	 </div>
- 	<div class='WDChallenges'>
+	 
+ 	<div class='WkDayChallenges'>
  		<h4>Weekday Challenges</h4>
-		<p>This will be either the 7th or 8th challenge type.  From Monday to Friday, there is at least one challenge available, often available from Monday until Friday.  Sometimes, you will get a one- or two-day challenge on the weekdays.  You will, in return, earn both gold and experience, after completing one of the first 6 challenges.
-	
+		<p>This will be one of the first 6 challenge types.  From Monday to Friday, there is at least one challenge available, often available from Monday until Friday.  Sometimes, you will get a one- or two-day challenge on the weekdays.  You will, in return, earn both gold and experience, after completing it.  That challenge will remain listed even after completion, with no indication that it is done.
+	</div>
+	<div class='WkEndChallenges'>
 		<h4>Weekend Challenges</h4>
-		<p class='intro'>You will see two choices listed on the left side, and there will be a button you can push.  If the button doesn't work, that means either it's broken or you used one of your characters to finish it .  Please note that you can do only one of the two types of weekend challenges per device per weekend.  In other words, if you have X number of characters on one iPad, and you complete the Gem Challenge, you will NOT be able to complete the Charm Challenge with that or any other character on that iPad.</p>
+		<p class='intro'>You will see two choices listed on the left side, and there will be a button you can push.  If the button doesn't work, that means either it's broken or you used one of your characters to finish it.  Please note that you can do only one of the two types of weekend challenges per device per weekend.  In other words, if you have X number of characters on one iPad, and you complete the Gem Challenge, you will NOT be able to complete the Charm Challenge with that or any other character on that iPad.  A character on another device device, however, will be able to complete the same or the other one.  The flag to complete will show a small image above the flag.</p>
 		<h5>Gem Challenges</h5>
-		the gems will be put into the common pot of gems for that device, to be used for any of the X#,
+		<p class='gemC'>This will be either the 7th or 8th challenge type.  The button will take you to the flag you must complete.  The reward is 5 gems, and they will be put into the common pot of gems for that device, to be used as you desire for the characters on that device.</p>
 		<h5>Charm Challenges</h5>
-		<p>This charm ALWAYS requires that you do the last type of challenge, and ALWAYS rewards you with a special charm: essence, scavenger, or monk.
+		<p class='charmC'><strong>As soon as you can spare the gems to buy the weapon, start doing this one to get special charms.</strong>  This will be the last challenge type, and you will need a weapon from the tier listed, which can only be had by spending gems in the shop.  The button will take you to the shop and scroll to the exact weapon you need.  The game does NOT check your inventory prior to going to the shop, so if you already have it in your inventory, there is no need to waste more gems buying it again!  This challenge ALWAYS rewards you with a special charm: essence, scavenger, or monk.  I recommend restarting if scavenger is the reward.  Don't sell the weapon afterwards - you'll probably need it again!.</p>
+	 </div>
+</div>
