--- a/Challenges.htm
+++ b/Challenges.htm
@@ -5,9 +5,11 @@
 			<img src='https://github.com/ReveurGAM/Dungeon-Hunter4/blob/master/Challenges%20Menu.PNG' alt='Dungeon Hunter 4 Challenges Screen'/>
 			<figcaption>The DH4 Challenges Screen</figcaption>
 		</figure>
-	 	<p>There are no longer any events in DH4, but the challenges still exist: "weekday" and "weekend" challenges.  If you dislike the challenge or the reward for it, you can try restarting the game and/or your device, which <em>may</em> cause it to change.  You can access the challenges by opening the white tab on the world map, touching "DH4 & Me", then touching "Challenges".  A screen like the above will appear.</p>
+	 	<p>There are no longer any events in DH4, but the challenges still exist: "weekday" and "weekend" challenges.  You can access the Challenges screen by opening the white tab on the left side of the world map, touching "DH4 & Me", then touching "Challenges".  A screen like the above will appear.</p>  If you dislike the challenge or the reward for it, you can try restarting the game and/or your device, which <em>may</em> cause it to change.
+		<p>As you can see, the weekday challenge plus the upcoming weekend's charm challenge, or both weekend challenges are displayed.  It will give you no indication whether or not you've completed a challenge.  For the weekend challenges, there are buttons to push to take you either to the area to complete or to the shop, where it'll show you the weapon you need.</p>
 		<p><br/>Here are some examples of challenges:</p>
 		<ol>
+			<li>merge two charms of a particular shape;</li>
 			<li>upgrade a particular item (e.g. helm, weapon);</li>
 			<li>upgrade a particular item to its maximum potential;</li>
 			<li>add a slot to a particular item;</li>
@@ -18,7 +20,8 @@
 			<li>defeat a boss;</li>
 			<li>complete a flag using a specific tier weapon, from tier 12, 24, 36, etc., that is ONLY available by purchasing it with GEMS;</li>
 		</ol>
-		<p>The weekday challenge plus the upcoming weekend's charm challenge, or both weekend challenges will be displayed.  It will give you no indication whether or not you've completed a challenge.  For the weekend challenges, there will be buttons to push to take you either to the area to complete or to the shop, where it'll show you the weapon you need.
+		<p>Please note that you can do only one of the two types of weekend challenges per device per weekend, and the same is true for the weekday challenges.  In other words, if you have X number of characters on one iPad, and you complete the Gem Challenge, you will NOT be able to complete the Charm Challenge with that or any other character on that iPad.  A character on another device device, however, will be able to complete the same or the other one.<p>
+
 		<p>In addition to displaying the currently available challenges, this screen also shows you your PVP and Eternal Battle ranks, and you can go to the Leaderboards; and you can also connect to the Chests of Fate and Gifting.  If there is an exclamation mark on either of the latter, that means something (a free item from the Bronze Chest, perhaps, or a gift from someone) is waiting for you from that area.
 	 </div>
 	 
@@ -28,7 +31,7 @@
 	</div>
 	<div class='WkEndChallenges'>
 		<h4>Weekend Challenges</h4>
-		<p class='intro'>You will see two choices listed on the left side, and there will be a button you can push.  If the button doesn't work, that means either it's broken or you used one of your characters to finish it.  Please note that you can do only one of the two types of weekend challenges per device per weekend.  In other words, if you have X number of characters on one iPad, and you complete the Gem Challenge, you will NOT be able to complete the Charm Challenge with that or any other character on that iPad.  A character on another device device, however, will be able to complete the same or the other one.  The flag to complete will show a small image above the flag.</p>
+		<p class='intro'>You will see two choices listed on the left side, and there will be a button you can push.  If the button doesn't work, that means either it's broken or you used one of your characters to finish it.  The flag to complete will show a small image above the flag.</p>
 		<h5>Gem Challenges</h5>
 		<p class='gemC'>This will be either the 7th or 8th challenge type.  The button will take you to the flag you must complete.  The reward is 5 gems, and they will be put into the common pot of gems for that device, to be used as you desire for the characters on that device.</p>
 		<h5>Charm Challenges</h5>
