--- a/Flaws.html
+++ b/Flaws.html
@@ -15,6 +15,12 @@
                 </div>
             <li>Not being able to access the main chat from lobbies, menues and other areas.</li>
             <li>Not being able to choose what gift to give to others.</li>
+            <li>Each type of item on the ground has only one image, making it impossible to know if it is worth going back to pick it up.</li>
+            <li>The only social network options are Game Loft and Facebook.</li>
+            <li>Aiming your attacks by yourself is extremely difficult, and the auto-aiming system doesn't work for some of the skills, thus making it very easy to waste certain power attacks.</li>li>
+            <li>Distances are strange and not proportional to what you see.  Sometimes monsters have a much greater range than is indicated by what you see, and the borders of terrain aren't always correct.</li>
+            <li>They are so proud of their artwork that they do not fade out a large piece of terrain that obscures the playing field, thus making it harder to fight enemies and find dropped items.</li>
+            <li>You cannot zoom in or out on the battle and map screens, although the game will zoom out in certain areas and when fighting a boss.</li>
             <li>It isn’t possible to edit a message (at exactly the point of the error) you’ve typed in chat but haven’t yet sent – you must delete to the point of the error and retype it all. </li>
             <li>The amount of gold given as a gift is pitiful even if the giver is rich.</li>
             <li>Gold can only be accumulated to the value of 999,999,999.</li>
