--- a/glitches.html
+++ b/glitches.html
@@ -6,7 +6,7 @@
 <body>
 <div id="Glitch">
     <h2 class=”glitches”>Glitches</h2>
-    <p>I have been playing DH4 since October 2017 and have noticed plenty of problems. The following is a list of many of the glitches, [with a solution in brackets, or multiple solutions listed in order] (if there is one).  Some are minor inconveniences, while others require that you exit your flag, restart the game, or even restart your device.</p>
+    <p>I have been playing DH4 since October 2017 and have noticed plenty of problems. The following is a list of many of the glitches, [with a solution in brackets, or multiple solutions listed in order, if any exist].  Some are minor inconveniences, while others require that you exit your flag, restart the game, or even restart your device.</p>
     <ul>
         <li>All events are broken; only the challenges remain [no solution]</li>
         <img src="Images/events/Event currently unavailable message.png" alt="Event currently unavailable message" />
@@ -32,22 +32,22 @@
         <img src="Images/errors/#" alt="Logged out because you're in two guilds error message" />
         <li>A large number of my gems suddenly disappeared, although that could’ve been my son using gems when his health potions ran out but he kept clicking it. [If you're sharing the device with another person who is also playing DH4, talk and inform him/her that the gems are in a shared pool and figure out an equitable plan together, otherwise there is no solution.] </li>
         <li>Suddenly being unable to take any action (this is exclusively in multi-player games, and usually happens after performing certain menu actions). [Exit the level.]</li>
-        <li>Monsters cease attacking (happens after certain menu actions are performed). [Exit the level.]</li>
+        <li>Monsters cease attacking (happens after certain menu actions are performed), which will eventually stop you from proceeding. [Exit the level.]</li>
         <img src="Images/glitches/glitch non-violent monster.png" alt="Monsters cease attacking glitch" />
         <li>Gifts not being shown when you click on the message and the notification being delayed for hours or even days. [Sometimes going into the social menu in the tab causes received gifts to be displayed.] </li>
         <li>The game cannot distinguish properly between two different devices using the same email/user name, hence sometimes both will be logged out and, therefore, unable to access online features, for example. [Follow these <a href="#andor">and/or instructions</a>.]</li>
         <img src="Images/errors/No internet connection.png" alt="No internet connection error message" />
         <li>For the first couple of months of play, especially when playing for a long time and late at night, the in-app purchases screen randomly pops up more and more frequently, and restarting the game doesn’t help. [Endure it or give up when it interfers with game play too much. After 2-3 months, this nuisance should stop happening (it's probably like nagware, rather than a glitch);</li>
         <img src="Images/in-app-purchases/In-App Purchase.png" alt="In-App Purchases screen appeared without being accessed" />
-
         <li>Usually invitations and gift notifications are minimized on the left side in the form of a bust with a red exclamation mark but they sometimes open by themselves while you are fighting, blocking part of the screen and preventing you from fighting until you close it; this can lead to death!; </li>
         <img src="Images/errors/Play-invitation.png" alt="Play together invitation from another player" />
         <li>DPS not being the same between its two display points (inventory and the character panel). [Wait and eventually they will be the same. Trust the character panel.]</li>
         <li>The warmage (WM) PVP glitch wherein a WM sustains far less damage than they should – one person estimates ¼. [Use a WM and avoid PVP with them.]</li>
         <li>There are secret glitches I’ve promised not to reveal. [????]</li>
+        <li>Suddenly being transported a large distance through walls and other barriers.[No solution.]</li>
     </ul>
-
-    In addition, some people have reported glitches like:
+<hr/>
+    <p>In addition, some people have reported glitches like:</p>
     <ul>
         <li>Character(s) being reset to level 1. [If someone tells you that your level is shown as 0 for an extended period of time in a level, exit the level before it ends to prevent this from happening - thanks MerlionROARS!]</li>
         <li>Friends list is not functioning. [Unknown, but try following these <a href="#andor">and/or instructions</a>.]</li>
