--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Dungeon Hunter 4</title>
+		<meta http-equiv="refresh" content="10">
+		<link rel="stylesheet" type="text/css" href="Style/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Merienda|Rammetto+One|Supermercado+One" rel="stylesheet">
+        <title>DH4 Glitches</title>
   	</head>
   	<body>
 		<header>
