--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Dungeon Hunter 4</title>
-		<meta http-equiv="refresh" content="10">
-		<link rel="stylesheet" type="text/css" href="Style/style.css">
-		<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Merienda|Rammetto+One|Supermercado+One" rel="stylesheet">
-        <title>DH4 Glitches</title>
   	</head>
   	<body>
 		<header>
@@ -175,9 +171,56 @@ There are two ways to connect to the Internet: via wifi and using your data acce
 If you want to play offline, you can continue to play solo but some things will not work: merging charms, adding/removing charms, adding friends, upgrading items, adding friends, all chat areas, all multiplayer areas (FFA,TDM, co-op).  Some of them, such as completing the merger/addition/removal of charms and item upgrades, and sending gifts, will complete when you are online.
 
 If you are connected to a network, you can still play multi-player games with people on your network.  Select “local” instead of “online”.
+<h2 class=”glitches”>Glitches</h2>
+
+I have been playing DH4 since October 2017 and have noticed plenty of problems: 
+<ul>
+<li>all events are broken, only the challenges remain; </li>
+
+  
+<li>invisible continuation crystals, totem poles, NPC enemies and gold; </li>
+<li>being unable to join someone in a co-operative level, free-for-all (FFA) and/or team deathmatch (TDM); </li>
+<li>entering a multiplayer area (most often, the astral arena where FFA (aka PVP) is played out and there being no ground, just the backdrop of a purplish void streaked with white, wherein you cannot go anywhere or do anything although your character appears to move and, usually, there is no timer; </li>
+    ` 
+<li>the guild I created disappeared once, during which time I joined someone else’s guild, only to have my guild reappear, which sometimes causes a conflict because the game only allows you to be in one guild; </li>
+<li>a large number of my gems suddenly disappearing (although that could’ve been a mistake made by my son); </li>
+<li>suddenly being unable to take any action (this is exclusively in multi-player games); </li>
+<li>suddenly being unable to rejoin a game with someone you were able to play with due to “game requirements not being met” and other nonsense; </li>
+<li>gifts not being shown when you receive them and the notification being delayed for hours or even days; </li>
+<li>the game cannot distinguish properly between two different devices using the same email/user name, hence sometimes both will be logged out and, therefore, unable to access chat and co-op games, for example; </li>
+<li>for the first couple of months of play, when I was up late the in-app purchases screen would randomly pop up more and more frequently at night, and restarting the game didn’t help – I generally had to give up when it interfered with game play too much; </li>
+<li>one day, my friends list was completely empty, although it later returned; </li>
+<li>usually invitations and gift notifications are minimized on the left side in the form of a bust with a red exclamation mark but they sometimes open by themselves while you are fighting, blocking part of the screen and preventing you from fighting until you close it; this can lead to death!; </li>
+<li>my DPS not being the same between its two display points (inventory and the character panel); and</li>
+<li>the warmage (WM) PVP glitch wherein a WM sustains far less damage than they should – one person estimates ¼.</li>
+<li>There are secret glitches I’ve promised not to reveal. </li>
+</ul>
+
+In addition, some people have reported glitches like:
+<ul>
+<li>their character(s) being reset to level 1; </li>
+<li>their friends list not functioning; </li>
+<li>the scavenger charm not working right; </li>
+<li>their guild being deleted; </li>
+<li>their screen name showing up in global chat as _______;</li>
+<li>not being able to open a bronze, silver or gold chest; </li>
+</ul>
+
+<h2 class=”shortcomings”>Shortcomings</h2>
+There are also short-comings of the game, such as:
+<ul>
+<li>not being able to access global chat from co-op games; </li>
+<li>not being able to choose what gift to give to others; </li>
+<li>it seems unlikely that GameLoft (GL) is making any efforts to maintain, let alone improve, DH4; </li>
+<li>it isn’t possible to edit a message you’ve typed in chat but haven’t yet sent – you must delete to the point of the error and retype it all; </li>
+<li>the amount of gold given as a gift is pitiful even If the giver is rich; </li>
+<li>the way that the game counts items in your backpack is strange and includes what you’re wearing, but doesn’t include gems, elixirs and books of skill; </li>
+<li>once you’ve completed the story in normal and hardcore modes, there isn’t a lot to do other than PVP, help people, “farm” and “grind.”  This is especially true once you reach level 130; and</li>
+<li>despite the fact that charms are small, they take up the same space as the largest items, although they can be grouped together in one slot if they are the SAME tier (level) but not if they are different tiers. </li>
+</ul>
 
 
-
+<p>NOTE:  Android and Apple users do not play on the same server!</p>
   </body>
   <footer>
   All rights go to their respective parties in the case of copyrights.  Everything else is under GNU/CCL.
