Added info to charms

--- a/charms.html
+++ b/charms.html
@@ -5,14 +5,16 @@
 	<h4>Standard</h4>
 	<p>These are:</p>
 	<ul>
-		<li><ins>Circular</ins></li>: fortitude, power, agility, arcana,
-		<li><ins>Square</ins></li>: wisdom, heart, soul, bandit,
-		<li><ins>Triangular</ins></li>: agility, ghost, monk, mind,
-		<li><ins>Star</ins></li>: winter, storm, soldier, blessing,
+		<li><ins>Circular</ins></li>: arcana, fortitude, power, agility, essence
+		<li><ins>Square</ins></li>: wisdom, heart, soul, scavenger, bandit
+		<li><ins>Triangular</ins></li>: nature, fire, mind, perception, ghost
+		<li><ins>Star</ins></li>: blessing, soldier, winter, storm, monk
 
 	<h4>Special</h4>
 	<p>These are: monk, ghost, essence and scavenger, and the hexagonal charms are exclusive.  You should always keep these if you get them as they are very useful, except the latter.</p>
 
 	<h4>Hexagonal</h4>
-	<p>You will probably find ONE item (usually leg armor) with a hexagonal charm slot in it early in playing DH4 with any given character, and you will be able to add 3 other slots to it.  Do not hold onto this waiting for hex charms – they are only available within the gold chest.  You can’t even get them as a gift.</p>
+	<p>You will probably find ONE item (usually leg armor) with a hexagonal charm slot in it early in playing DH4 with any given character, and you will be able to add 3 other slots to it.  Do not hold onto this waiting for hex charms – they are only available within the gold chest.  You can’t even get them as a gift.  Besides, even if you do get some from the chest, that leg armor will be around tier 15, with the best armor being tier 103.</p>
+
+	<p>If you need other information about charms, you can find details like merge time, etc., at dh4.wikia.com/charms (please note that some info there is outdated.)</p>
 			</article>
