--- a/Flaws.html
+++ b/Flaws.html
@@ -13,29 +13,51 @@
                 <div class="img">
                         <img src="Images/inventory/Extended inv2.png" alt="Simulation of complete inventory"/>
                 </div>
-            <li>Not being able to access the main chat from lobbies, menues and other areas.</li>
-            <li>Not being able to choose what gift to give to others.</li>
-            <li>Each type of item on the ground has only one image, making it impossible to know if it is worth going back to pick it up.</li>
-            <li>The only social network options are Game Loft and Facebook.</li>
-            <li>Aiming your attacks by yourself is extremely difficult, and the auto-aiming system doesn't work for some of the skills, thus making it very easy to waste certain power attacks.</li>li>
-            <li>Distances are strange and not proportional to what you see.  Sometimes monsters have a much greater range than is indicated by what you see, and the borders of terrain aren't always correct.</li>
-            <li>They are so proud of their artwork that they do not fade out a large piece of terrain that obscures the playing field, thus making it harder to fight enemies and find dropped items.</li>
-            <li>You cannot zoom in or out on the battle and map screens, although the game will zoom out in certain areas and when fighting a boss.</li>
-            <li>It isn’t possible to edit a message (at exactly the point of the error) you’ve typed in chat but haven’t yet sent – you must delete to the point of the error and retype it all. </li>
-            <li>The amount of gold given as a gift is pitiful even if the giver is rich.</li>
-            <li>Gold can only be accumulated to the value of 999,999,999.</li>
-            <li>The way that the game counts items in your backpack is strange. 
+            <li><em></em>Chat:
                 <ul>
+                <li>Can't access the main chat from lobbies, menues and other areas.</li>
+                <li>It isn’t possible to edit a message (at exactly the point of the error) you’ve typed in chat but haven’t yet sent – you must delete to the point of the error and retype it all. </li>
+                </ul>
+            </li>
+            <li><em>Gifts:</em>
+                <ul>
+                <li>Can't choose what gift to give to others.</li>
+                <li>The amount of gold given as a gift is pitiful even if the giver is rich.</li>
+                    </ul>
+            </li>
+            <li><em>Item images:</em> 
+                <ul>
+                <li>Each type of item on the ground has only one image, making it impossible to know if it is worth going back to pick it up.</li>
+                <li>
+                </ul>
+            </li>
+            <li><em>Social network log-in options:</em> They only have Game Loft and Facebook.</li>
+            <li><em>Attacks:</em>
+                <ul>
+                <li>Aiming your attacks by yourself is extremely difficult, and the auto-aiming system doesn't work for some of the skills, thus making it very easy to waste certain power attacks.  For example, while the ranged attacks of the WarMage and Sentinel and the standard BladeMaster attack will tend to auto-aim within a certain radius, some power attacks do not do this, making it quite easy to waste energy and an attack....or three.</li>
+                <li>Elemental damage does not happen except for at the peak of the attack.  If, for example, you are in the Wasteland and walk through a lightning strike before or after the peak, you will sustain no damage.  If you walk through fire in the Clockwork Dungeon while you can still see it near the end, you'll take no damage.</li>
+                </ul>
+                    </li>
+            <li><em>Distance & Range:</em>  Distances are strange and sometimes not proportional to what you see.  Sometimes monsters have a much greater range than is indicated by what you see, and the borders of terrain aren't always correct.</li>
+            <li><em>Foreground images:</em>  They are so proud of their artwork that they do not fade out a large piece of terrain that obscures the playing field, thus making it harder to fight enemies and find dropped items.</li>
+            <li><em>Zoom:</em>  You cannot zoom in or out on the battle and map screens, although the game will zoom out in certain areas and when fighting a boss.</li>
+            <li><em>Gold limit:</em>  Gold can only be accumulated to the value of 999,999,999.</li>
+            <li><em>Inventory:</em> 
+                <ul>
+                    <li>The way that the game counts items in your backpack is strange.</li>
                     <li>Particularly odd is that each charm takes one slot despite being very small.  Space taken is not determined by relative size, thus you can carry 30 chest armor pieces with the same number of slots as 30 charms.</li>
                     <li>Charms of the same level and type will stack in your inventory, but not decrease the number of slots used.</li>
                     <li>Charms that are merging do not get stracked with other charms of the same level.</li>
                     <li>Slots aren't used for gold, gems, potions, elixirs and books of skill.</li>
                     <li>Equipped items take up slots in the backpack, despite the fact that they are not in the backpack.</li>
+                    <li>If a change (upgrade, charm merge, removal of charm) to an item is started, and you go offline, these items will have a "?" over them, and the item will be inaccessible to any change, including (un)equipping and selling, until you're online again.</li>
                 </ul>
             </li>
-            <li>Once you’ve completed the story in normal and hardcore modes, there isn’t a lot to do other than PVP, help people, “farm” gems and charms, and “grind.” This is especially true once you develop your character to the point that it has a high DPS (over 1 million), have completed both normal and hardcore modes, and have completed all flags from normal to godlike difficulties, or reach level 130.</li>
-            <li>Being disconnected from your co-op level is caused by many functions on your device.</li>
-            <li>Android and Apple users cannot play on the same server!</li>
+            <li><em>High-level activity:</em>  Once you’ve completed the story in normal and hardcore modes, there isn’t a lot to do other than PVP, help people, “farm” gems and charms, and “grind.” This is especially true once you develop your character to the point that it has a high DPS (over 1 million), have completed both normal and hardcore modes, and have completed all flags from normal to godlike difficulties, or reach level 130.</li>
+            <li><em>Disconnects:</em>  Being disconnected from your co-op level is caused by many functions on your device.</li>
+            <li><em>Android & Apple:</em>  Android and Apple users cannot play on the same server!</li>
+            <li><em>Notifications:</em>  The game will send notifications of gifts, merges, removals, upgrades, etc., but anything that happens in the inventory does not come into effect until you access the game and go into the inventory WHILE ONLINE.</li>
+            
         </ul>
     </div>
 </body>
