Images added, named, organized

--- a/glitches.html
+++ b/glitches.html
@@ -45,6 +45,9 @@
         <li>The warmage (WM) PVP glitch wherein a WM sustains far less damage than they should – one person estimates ¼. [Use a WM and avoid PVP with them.]</li>
         <li>There are secret glitches I’ve promised not to reveal. [????]</li>
         <li>Suddenly being transported a large distance through walls and other barriers.[No solution.]</li>
+        <li>Being disconnected from a game for no reason. [Rejoin.]</li>
+        <li>Being unable to click next at the end of a co-op game, even when you were invited. [Rejoin.]</li>
+        <li>Sometimes you won't get the charm shown as the reward for the charm challenge - you'll get a different special one. [Cry.]</li>
     </ul>
 <hr/>
     <p>In addition, some people have reported glitches like:</p>
